:star: feat- adição de legendas em algumas imagens

--- a/docs/tokens/cosmos_tokenizer/wavelet_compression.ipynb
+++ b/docs/tokens/cosmos_tokenizer/wavelet_compression.ipynb
@@ -5,9 +5,7 @@
    "id": "b4af9517",
    "metadata": {},
    "source": [
-    "# Image Decomposition With Wavelets | Decomposição de imagem com Wavelets\n",
-    "\n",
-    "**_Authors | Autores: [@figredos](http://github.com/figredos)_**\n"
+    "# Decomposição de imagem com Wavelets\n"
    ]
   },
   {
@@ -15,16 +13,17 @@
    "id": "fcab29af",
    "metadata": {},
    "source": [
-    "## Importing packages and images | Importando pacotes e imagens\n"
+    "## Importando pacotes e imagens\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e79cf9ac",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importando pacotes\n",
     "import os\n",
     "import pywt\n",
     "import numpy as np\n",
@@ -34,11 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c62b996b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importando imagem\n",
     "ronaldinho = imread(\n",
     "    os.path.join('..', 'images', 'cosmos_tokenizer', 'example_images', 'ronaldinho.jpg')\n",
     ")\n",
@@ -54,30 +54,28 @@
    "id": "5f2855f7",
    "metadata": {},
    "source": [
-    "## One-level Decomposition | Decomposição de um nível\n"
+    "## Decomposição de um nível\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7dc2ec13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of decompositions | Numero de decomposições\n",
+    "# Decomposição Wavelet\n",
     "n = 1\n",
-    "\n",
-    "# Type of wavelet | Tipo de wavelet\n",
     "w = 'haar'\n",
     "\n",
-    "# Storing coefficients | Armazenando coeficientes\n",
+    "# Armazenando coeficientes para reconstrução\n",
     "arr_rgb = []\n",
     "\n",
     "for c in range(3):\n",
     "    channel = ronaldinho[..., c]\n",
     "    coeffs = pywt.wavedec2(channel, wavelet=w, level=n)\n",
     "\n",
-    "    # Normalizing coefficients (for visualization) | Normalizando coeficientes para visualização\n",
+    "    # Normalizando coeficientes para visualização\n",
     "    coeffs_norm = list(coeffs)\n",
     "    coeffs_norm[0] /= np.abs(coeffs_norm[0]).max()\n",
     "    for i in range(1, n + 1):\n",
@@ -90,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e18becec",
    "metadata": {},
    "outputs": [
@@ -106,10 +104,10 @@
     }
    ],
    "source": [
-    "# Image Reconstruction | Reconstruindo imagem\n",
+    "# Reconstruindo imagem\n",
     "arr_rgb = np.stack(arr_rgb, axis=-1)\n",
     "\n",
-    "# Visualizing image | Visualizando imagem\n",
+    "# Visualizando imagem\n",
     "plt.figure(figsize=(16, 16))\n",
     "plt.imshow(np.clip(arr_rgb, 0, 1))\n",
     "\n",
@@ -121,30 +119,28 @@
    "id": "73fdf472",
    "metadata": {},
    "source": [
-    "## Two-level Decomposition | Decomposição de dois níveis\n"
+    "## Decomposição de dois níveis\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5a6dbbf1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of decompositions | Numero de decomposições\n",
+    "# Decomposição Wavelet\n",
     "n = 2\n",
-    "\n",
-    "# Type of wavelet | Tipo de wavelet\n",
     "w = 'haar'\n",
     "\n",
-    "# Storing coefficients | Armazenando coeficientes\n",
+    "# Armazenando coeficientes para reconstrução\n",
     "arr_rgb = []\n",
     "\n",
     "for c in range(3):\n",
     "    channel = cat_on_snow[..., c]\n",
     "    coeffs = pywt.wavedec2(channel, wavelet=w, level=n)\n",
     "\n",
-    "    # Normalizing coefficients (for visualization) | Normalizando coeficientes para visualização\n",
+    "    # Normalizando coeficientes para visualização\n",
     "    coeffs_norm = list(coeffs)\n",
     "    coeffs_norm[0] /= np.abs(coeffs_norm[0]).max()\n",
     "    for i in range(1, n + 1):\n",
@@ -157,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8156dbee",
    "metadata": {},
    "outputs": [
@@ -173,10 +169,10 @@
     }
    ],
    "source": [
-    "# Image Reconstruction | Reconstruindo imagem\n",
+    "# Reconstruindo imagem\n",
     "arr_rgb = np.stack(arr_rgb, axis=-1)\n",
     "\n",
-    "# Visualizing image | Visualizando imagem\n",
+    "# Visualizando imagem\n",
     "plt.figure(figsize=(16, 16))\n",
     "plt.imshow(np.clip(arr_rgb, 0, 1))\n",
     "\n",
@@ -188,15 +184,15 @@
    "id": "18b006ca",
    "metadata": {},
    "source": [
-    "## References | Referências\n",
+    "## Referências\n",
     "\n",
     "- Data Driven Science & Engineering: Machine Learning, Dynamical Systems, and Control\n",
     "  by S. L. Brunton and J. N. Kutz\n",
     "  Cambridge Textbook, 2019\n",
     "  Copyright 2019, All Rights Reserved\n",
     "  http://databookuw.com/\n",
-    "- [github - dynamicslab/databook_python - Capítulo 2 Seção 6 - Decomposição de imagem com Wavelets ](https://github.com/dynamicslab/databook_python/blob/master/CH02/CH02_SEC06_4_Wavelet.ipynb)\n",
-    "- [github - dynamicslab/databook_python - Capítulo 2 Seção 6 - Compressão de imagem com Wavelets](https://github.com/dynamicslab/databook_python/blob/master/CH02/CH02_SEC06_5_Wavelet.ipynb)\n"
+    "  - [github - dynamicslab/databook_python - Capítulo 2 Seção 6 - Decomposição de imagem com Wavelets ](https://github.com/dynamicslab/databook_python/blob/master/CH02/CH02_SEC06_4_Wavelet.ipynb)\n",
+    "  - [github - dynamicslab/databook_python - Capítulo 2 Seção 6 - Compressão de imagem com Wavelets](https://github.com/dynamicslab/databook_python/blob/master/CH02/CH02_SEC06_5_Wavelet.ipynb)\n"
    ]
   }
  ],
