feat: adiciona seção de treinamento do encoder-decoder
fix: muda o split de dados do dataset sintetico para 50% dados do tipo mouse_click e 50% dados sem nenhuma ação

--- a/models/Text_Encoder.ipynb
+++ b/models/Text_Encoder.ipynb
@@ -45,24 +45,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 58,
       "metadata": {
         "id": "Sdx_icDB2Vdb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1101b53d-57d4-49cb-c053-11fe3ac71d0e"
+        "outputId": "4f90b044-33e0-4700-94ee-dcf22aecf545"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x79124803ceb0>"
+              "<torch._C.Generator at 0x79339d090d30>"
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 58
         }
       ],
       "source": [
@@ -74,6 +74,7 @@
         "import random\n",
         "import torch.optim as optim\n",
         "from torch.utils.data import TensorDataset, DataLoader\n",
+        "import matplotlib.pyplot as plt\n",
         "\n",
         "# Garante a reprodutibilidade\n",
         "torch.manual_seed(42)"
@@ -116,7 +117,7 @@
       "metadata": {
         "id": "8GiQ-3UBIFqz"
       },
-      "execution_count": 20,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -162,7 +163,7 @@
       "metadata": {
         "id": "WyiQULmkJKEz"
       },
-      "execution_count": 21,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -189,9 +190,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bTmDJytpTMzP",
-        "outputId": "8fd024c9-6519-4d92-d98e-7ba5b3e3b4a1"
+        "outputId": "6c4597da-8721-48d2-aa90-5afda4ff5b02"
       },
-      "execution_count": 22,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +241,7 @@
       "metadata": {
         "id": "skhXNuOlP1uw"
       },
-      "execution_count": 23,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -262,12 +263,34 @@
         "    )\n",
         "\n",
         "  def forward(self, z):\n",
-        "    return self.net(z)"
+        "    x = self.net(z)\n",
+        "    return torch.sigmoid(x)\n",
+        "\n",
+        "\n",
+        "class TextDecoder(nn.Module):\n",
+        "  \"\"\"\n",
+        "  Decoder determinístico (reconstrução)\n",
+        "  Mapeia o vetor latente de volta para o espaço da ação original\n",
+        "  \"\"\"\n",
+        "\n",
+        "  def __init__(self, latent_dim=LATENT_ACTION_DIM, output_dim=INPUT_VECTOR_DIM):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.net = nn.Sequential(\n",
+        "      nn.Linear(latent_dim, 32),\n",
+        "      nn.ReLU(),\n",
+        "      nn.Linear(32, 16),\n",
+        "      nn.ReLU(),\n",
+        "      nn.Linear(16, output_dim)\n",
+        "    )\n",
+        "\n",
+        "  def forward(self, z):\n",
+        "    return self.net(z)\n"
       ],
       "metadata": {
         "id": "tio4iMccYTiB"
       },
-      "execution_count": 24,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -275,7 +298,7 @@
       "source": [
         "## 4. Geração de um dataset sintético simples\n",
         "\n",
-        "Como a estrutura das ações é muito simples, é mais vantajoso montar um dataset sintético com mais ações do que usar o dataset real com 200 simulações. Note que na simulação real, menos de 1% dos frames terão uma ação correspondente, logo a proporção de ações positivas (mouse_click) em relação a quantidade de frames é de 1%, a fim de espelhar o comportamento real da simulação."
+        "Como a estrutura das ações é muito simples, é mais vantajoso montar um dataset sintético com mais ações do que usar o dataset real com as 200 simulações. Note que na simulação real, menos de 1% dos frames terão uma ação correspondente. Mesmo assim, opta-se por fazer um split de 50/50 em dados com ação positiva e nula. Isso se deve principalmente porque caso a divisão que espelha o comportamento real fosse usada, o modelo não teria incentivos para minimizar a perda das ações com clique, e focaria apenas em minimizar ao máximo o erro da ausência de ação, ignorando o outro caso."
       ],
       "metadata": {
         "id": "qBlYqqB9cBYA"
@@ -284,14 +307,13 @@
     {
       "cell_type": "code",
       "source": [
-        "NUM_SAMPLES = 2000     # Número de amostras sintéticas\n",
-        "BATCH_SIZE = 64        # Tamanho do lote\n",
+        "NUM_SAMPLES = 2000\n",
+        "BATCH_SIZE = 64\n",
         "\n",
-        "# Lista para armazenar os vetores de input\n",
         "synthetic_inputs = []\n",
         "\n",
         "# Gerar amostras de clique\n",
-        "for _ in range(20): # 1% de 2000\n",
+        "for _ in range(1000): # 50% de 2000\n",
         "\n",
         "  pos_x = random.randint(50, 750)\n",
         "  pos_y = random.randint(50, 500)\n",
@@ -308,38 +330,43 @@
         "\n",
         "\n",
         "# Gerar amostras de Ausência de Ação\n",
-        "for _ in range(1980): # 99% de 2000\n",
+        "for _ in range(1000): # 50% de 2000\n",
         "  # Quando não tem ação, passa um None à função de encoding\n",
         "  synthetic_inputs.append(encoding_function(None))"
       ],
       "metadata": {
         "id": "ORoCvrBVceZp"
       },
-      "execution_count": 32,
+      "execution_count": 64,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Teste de entradas da lista de ações sintéticas\n",
-        "print(synthetic_inputs[0])\n",
-        "print(synthetic_inputs[50])"
+        "full_tensor = torch.stack(synthetic_inputs)\n",
+        "\n",
+        "# Note que como queremos reconstruir a entrada, ela é a mesma coisa que a saída\n",
+        "dataset = TensorDataset(full_tensor, full_tensor)\n",
+        "dataloader = DataLoader(dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+        "\n",
+        "print(f\"Dataset Sintético Gerado: {len(full_tensor)} amostras.\")\n",
+        "print(f\"Shape de um Batch: {next(iter(dataloader))[0].shape}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Z5BBywwygXJr",
-        "outputId": "dc4ed2b3-6048-4047-f471-59e82648fb58"
+        "id": "7r3PyF72R1LK",
+        "outputId": "cc42ad78-3769-48d7-ca5f-58babd794bf9"
       },
-      "execution_count": 35,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([1.0000, 1.0000, 0.2175, 0.7183])\n",
-            "tensor([0., 0., 0., 0.])\n"
+            "Dataset Sintético Gerado: 2000 amostras.\n",
+            "Shape de um Batch: torch.Size([64, 4])\n"
           ]
         }
       ]
@@ -347,11 +374,89 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 5."
+        "## 5. Treinamento"
       ],
       "metadata": {
         "id": "U1CNwmw9eGeo"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Iniciação dos modelos e otimizador\n",
+        "text_encoder = TextEncoder()\n",
+        "text_decoder = TextDecoder()\n",
+        "\n",
+        "# Vamos combinar os parâmetros dos dois modelos em uma única lista de parâmetros e otimizá-los de uma vez\n",
+        "params = list(text_encoder.parameters()) + list(text_decoder.parameters())\n",
+        "optimizer = optim.Adam(params, lr=1e-3)\n",
+        "\n",
+        "# Função de Perda é a MSE\n",
+        "loss_function = nn.MSELoss()"
+      ],
+      "metadata": {
+        "id": "j2N-9JrVTVBm"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "NUM_EPOCHS = 20\n",
+        "print(\"Iniciando treinamento\")\n",
+        "\n",
+        "train_losses = [] # Perdas de treinamento para plotar depois\n",
+        "\n",
+        "for epoch in range(NUM_EPOCHS):\n",
+        "    total_loss = 0  # Acumula a perda total de cada época\n",
+        "\n",
+        "    # Loop dos batches\n",
+        "    for data, _ in dataloader:\n",
+        "        optimizer.zero_grad()\n",
+        "\n",
+        "        # Forward pass, codifica na representação latente\n",
+        "        z_a = text_encoder(data)\n",
+        "\n",
+        "        # Forward pass, decodifica a representação latente\n",
+        "        reconstruction = text_decoder(z_a)\n",
+        "\n",
+        "        # Calcula a perda entre a reconstrução e os dados originais\n",
+        "        loss = loss_function(reconstruction, data)\n",
+        "\n",
+        "        loss.backward()  # Backpropagation\n",
+        "        optimizer.step()  # Atualiza os pesos do modelo com base nos gradientes\n",
+        "\n",
+        "        total_loss += loss.item()\n",
+        "\n",
+        "    avg_loss = total_loss / len(dataloader)\n",
+        "    train_losses.append(avg_loss)\n",
+        "\n",
+        "    # Mostra a perda a cada 5 épocas\n",
+        "    if (epoch + 1) % 5 == 0:\n",
+        "        print(f\"Epoch [{epoch+1}/{NUM_EPOCHS}], Loss de Reconstrução: {avg_loss:.6f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BCrX5bDwUOau",
+        "outputId": "f3af6d83-f596-458b-971a-a42a7bbfc762"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Iniciando treinamento\n",
+            "Epoch [5/20], Loss de Reconstrução: 0.013939\n",
+            "Epoch [10/20], Loss de Reconstrução: 0.010992\n",
+            "Epoch [15/20], Loss de Reconstrução: 0.008542\n",
+            "Epoch [20/20], Loss de Reconstrução: 0.003926\n"
+          ]
+        }
+      ]
     }
   ]
 }
