feat(VAE): reescreve o modelo com encoder decoder baseado em rede convolucional. Conserto da loss muito alta

--- a/models/VAE/VAE copy.ipynb
+++ b/models/VAE/VAE copy.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "b33d4618",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
     "        frame_count += 1\n",
     "\n",
     "    cap.release()\n",
-    "    print(f\"✅ Extraídos {saved_count} frames (de {frame_count} totais) para {frames_dir}\")\n",
+    "    # print(f\"Extraídos {saved_count} frames (de {frame_count} totais) para {frames_dir}\")\n",
     "\n",
     "\n",
     "# ==============================\n",
@@ -317,6 +317,13 @@
     "# 3. Processar todos os vídeos de uma pasta\n",
     "# ==============================\n",
     "def process_videos(videos_folder, frames_root=\"./frames\", frame_step=5):\n",
+    "    # Verificação de segurança adicionada\n",
+    "    if not os.path.exists(videos_folder):\n",
+    "        print(f\"ERRO: Pasta de vídeos não encontrada: {videos_folder}\")\n",
+    "        return\n",
+    "\n",
+    "    print(f\"Processando vídeos em: {videos_folder}...\")\n",
+    "    \n",
     "    for video_file in os.listdir(videos_folder):\n",
     "        if video_file.lower().endswith((\".mp4\", \".avi\", \".mov\")):\n",
     "            video_path = os.path.join(videos_folder, video_file)\n",
@@ -326,46 +333,66 @@
     "            # Extrai frames se a pasta estiver vazia\n",
     "            if not os.path.exists(frames_dir) or len(os.listdir(frames_dir)) == 0:\n",
     "                extract_frames(video_path, frames_dir, frame_step=frame_step)\n",
+    "    \n",
+    "    print(\"Processamento de vídeos finalizado.\")\n",
     "\n",
     "\n",
     "# ==============================\n",
     "# 4. Exemplo de uso\n",
     "# ==============================\n",
     "if __name__ == \"__main__\":\n",
-    "    videos_folder = \"/home/danilo/Faculdade/CIS/World-Foundation-Models/dataset/scenario1/videos\"  # Pasta com todos os vídeos\n",
-    "    frames_root = \"./frames\"\n",
+    "    current_notebook_dir = os.getcwd()\n",
+    "    # Aponta para dataset/scenario1/videos\n",
+    "    video_folder_relative = os.path.join(current_notebook_dir, '..', '..', 'dataset', 'scenario1', 'videos')\n",
+    "    VIDEO_FOLDER = os.path.abspath(video_folder_relative)\n",
+    "    \n",
+    "    # Salva frames em dataset/scenario1/frames (para não poluir a pasta do modelo)\n",
+    "    frames_folder_relative = os.path.join(current_notebook_dir, '..', '..', 'dataset', 'scenario1', 'frames')\n",
+    "    FRAMES_ROOT = os.path.abspath(frames_folder_relative)\n",
+    "    \n",
     "    frame_step = 5\n",
+    "    process_videos(VIDEO_FOLDER, FRAMES_ROOT, frame_step)\n",
     "\n",
-    "    # Extrai frames de todos os vídeos\n",
-    "    process_videos(videos_folder, frames_root, frame_step)\n",
-    "\n",
-    "    # Transform igual à do MNIST\n",
+    "    # Transform igual à do MNIST (Ajustado para 64x64 para compatibilidade VAE)\n",
     "    transform = transforms.Compose([\n",
-    "        transforms.Resize((100, 100)),\n",
+    "        transforms.Resize((64, 64)), # Alterado de 100 para 64 (potência de 2)\n",
     "        transforms.Grayscale(num_output_channels=1),\n",
     "        transforms.ToTensor()\n",
     "    ])\n",
     "\n",
     "    # Cria dataset com todos os frames extraídos\n",
-    "    full_dataset = VideoFramesDataset(frames_root, transform=transform)\n",
+    "    full_dataset = VideoFramesDataset(FRAMES_ROOT, transform=transform)\n",
     "\n",
-    "    # Divide entre treino (80%) e teste (20%)\n",
-    "    total_size = len(full_dataset)\n",
-    "    train_size = int(0.8 * total_size)\n",
-    "    test_size = total_size - train_size\n",
-    "    train_dataset, test_dataset = random_split(full_dataset, [train_size, test_size])\n",
+    "    # Verificação para evitar erro no random_split se não houver imagens\n",
+    "    if len(full_dataset) > 0:\n",
+    "        # Divide entre treino (80%) e teste (20%)\n",
+    "        total_size = len(full_dataset)\n",
+    "        train_size = int(0.8 * total_size)\n",
+    "        test_size = total_size - train_size\n",
+    "        train_dataset, test_dataset = random_split(full_dataset, [train_size, test_size])\n",
     "\n",
-    "    # Cria os dataloaders\n",
-    "    batch_size = 140\n",
-    "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
-    "    test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
+    "        # Cria os dataloaders\n",
+    "        batch_size = 140\n",
+    "        train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "        test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
-    "    # Define o device\n",
-    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "        # Define o device\n",
+    "        device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "    print(f\"✅ train_dataset: {len(train_dataset)} frames\")\n",
-    "    print(f\"✅ test_dataset: {len(test_dataset)} frames\")\n",
-    "    print(f\"✅ device: {device}\")\n"
+    "        print(f\"train_dataset: {len(train_dataset)} frames\")\n",
+    "        print(f\"test_dataset: {len(test_dataset)} frames\")\n",
+    "        print(f\"device: {device}\")\n",
+    "        \n",
+    "        # Teste rápido do shape\n",
+    "        try:\n",
+    "            batch_example = next(iter(train_loader))\n",
+    "            print(f\"Shape do Batch: {batch_example.shape}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Aviso: Não foi possível carregar um batch de exemplo. {e}\")\n",
+    "            \n",
+    "    else:\n",
+    "        print(\"Nenhum frame encontrado. Verifique se os vídeos foram gerados e o caminho está correto.\")\n",
+    "        print(f\"Caminho procurado: {FRAMES_ROOT}\")\n"
    ]
   },
   {
