--- a/models/VAE/vae_video.ipynb
+++ b/models/VAE/vae_video.ipynb
@@ -1626,7 +1626,12 @@
         "model = VAE().to(device)\n",
         "\n",
         "# history = train(model=model, train_loader=train_loader, test_loader=test_loader)\n",
-        "history = train(model, train_loader, test_loader, device, 30)"
+        "history = train(model, train_loader, test_loader, device, 30)\n",
+        "\n",
+        "# salva os pesos treinados\n",
+        "torch.save(model.state_dict(), \"vae_weights.pth\")\n",
+        "\n",
+        "print(\"Pesos do VAE salvos\")"
       ]
     },
     {
@@ -1671,7 +1676,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "wfm (3.12.3)",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -1684,7 +1690,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.12"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
